--- a/tuya/android/project/trunk/app/src/main/res/layout/item_jiongtu_list.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/item_jiongtu_list.xml
@@ -19,9 +19,8 @@
             android:layout_height="wrap_content"
             app:cardElevation="8dp"
             app:cardCornerRadius="@dimen/cardview_default_radius"
-            android:layout_marginLeft = "@dimen/card_margin"
-            android:layout_marginRight = "@dimen/card_margin"
-            android:layout_marginBottom = "@dimen/card_margin"
+            app:cardPreventCornerOverlap = "false"
+            app:cardUseCompatPadding="true"
             >
 
             <LinearLayout
