--- a/tuya/android/project/trunk/app/src/main/res/layout/item_main_tab.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/item_main_tab.xml
@@ -14,17 +14,24 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="@color/potato_white"
+        >
 
         <ImageView
             android:id="@+id/iv_icon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
+            android:layout_height="wrap_content"
+            android:src="@drawable/selector_nav_home"
+            />
+<!--
         <TextView
             android:id="@+id/tab_item_tv"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal" />-->
     </LinearLayout>
 </layout>
