--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,9 @@
        <!-- <item name="colorPrimary">#673AB7</item>
         <item name="colorPrimaryDark">#512DA8</item>
         <item name="colorAccent">#FF4081</item>-->
-        <item name="android:windowBackground">@color/window_background</item>
+        <item name="android:windowBackground">@color/app_bg</item>
+        <item name="android:windowContentOverlay">@color/app_bg</item>
+
     </style>
 
     <style name="Widget.CardContent" parent="android:Widget">
