--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
     <color name="text_title_color_press">#FF9308</color>
     <color name="text_title_color_normal">#5d5d5d</color>
 
+    <color name="app_bg">#ECECEC</color>
+
 </resources>
