--- a/tuya/android/project/trunk/app/src/main/res/layout/item_jiongtu_detail.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/item_jiongtu_detail.xml
@@ -27,13 +27,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
-                <com.cyou.sticker.view.AutoChangeImageView
+                <com.cyou.model.library.view.AutoChangeImageView
                     android:id="@+id/iv_pic"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:scaleType="fitXY"
                     >
-                </com.cyou.sticker.view.AutoChangeImageView>
+                </com.cyou.model.library.view.AutoChangeImageView>
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
