--- a/app/src/main/res/layout/activity_jiongtu.xml
+++ b/app/src/main/res/layout/activity_jiongtu.xml
@@ -5,10 +5,42 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <RelativeLayout
+            android:id="@+id/rl_header"
+            android:layout_width="fill_parent"
+            android:layout_height="50dip"
+            android:background="@color/sticker_blue"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="FitTime"
+                android:textColor="@color/potato_white"
+                android:textSize="@dimen/mshow_txt_max" />
+
+            <ImageView
+                android:id="@+id/iv_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:onClick="onClick"
+                android:padding="10dip"
+                android:src="@drawable/ic_add_white_24dp" />
+        </RelativeLayout>
+
         <LinearLayout
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rl_header">
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
@@ -40,6 +72,12 @@
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:layout_below="@id/toolbar"
+            android:background="@drawable/bottom_shadow_bg" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_below="@id/rl_header"
             android:background="@drawable/bottom_shadow_bg" />
 
     </RelativeLayout>
