--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,13 @@
 
 
     <style name="Theme.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-       <!-- <item name="colorPrimary">#673AB7</item>
-        <item name="colorPrimaryDark">#512DA8</item>
-        <item name="colorAccent">#FF4081</item>-->
+        <!-- Main theme colors -->
+        <!--   your app branding color for the app bar -->
+        <item name="colorPrimary">#673AB7</item>
+        <!--   darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">@color/google_blue</item>
+        <!--   theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">#FF4081</item>
         <item name="android:windowBackground">@color/app_bg</item>
         <item name="android:windowContentOverlay">@color/app_bg</item>
 
