--- a/tuya/android/project/trunk/app/src/main/res/layout/activity_main_camera.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/activity_main_camera.xml
@@ -1,34 +1,107 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.cyou.sticker.business.camera.customview.CommonTitleBar
-        android:id="@+id/title_layout"
-        style="@style/head_default"
-        app:titleTxt="贴纸相机" />
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="test"
+            type="String" />
+    </data>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/title_layout"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent">
 
 
-    <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="31dp"
-        android:padding="4dp"
-        android:src="@drawable/ic_camera_white"
-        app:fab_colorNormal="?attr/colorPrimary"
-        app:fab_colorPressed="?attr/colorPrimaryDark"
-        app:fab_colorRipple="?attr/colorPrimary" />
+        <RelativeLayout
+            android:id="@+id/rl_header"
+            android:layout_width="fill_parent"
+            android:layout_height="50dip"
+            android:background="@color/sticker_blue"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="FitTime"
+                android:textColor="@color/potato_white"
+                android:textSize="@dimen/mshow_txt_max" />
+
+            <ImageView
+                android:id="@+id/iv_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:onClick="onClick"
+                android:padding="10dip"
+                android:src="@drawable/ic_add_white_24dp" />
+        </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/rl_header">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <com.cyou.model.library.view.NormalEmptyView
+                    android:id="@+id/empty_view"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                </com.cyou.model.library.view.NormalEmptyView>
+
+                <com.cyou.model.library.view.refresh.RefreshListView
+                    android:id="@+id/swipe_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ListView
+                        android:id="@+id/list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:cacheColorHint="@android:color/transparent"
+                        android:divider="@android:color/transparent"
+                        android:dividerHeight="0px"
+                        android:listSelector="@android:color/transparent"
+                        android:scrollbars="none" />
+
+                </com.cyou.model.library.view.refresh.RefreshListView>
 
 
-</RelativeLayout>
+            </LinearLayout>
+        </FrameLayout>
+
+
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="31dp"
+            android:padding="4dp"
+            android:src="@drawable/ic_camera_white"
+            app:fab_colorNormal="@color/sticker_blue"
+            app:fab_colorPressed="@color/material_blue_grey_800"
+            app:fab_colorRipple="?attr/colorPrimary" />
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_below="@id/rl_header"
+            android:background="@drawable/bottom_shadow_bg" />
+
+
+    </RelativeLayout>
+</layout>
