--- a/app/src/main/res/layout/item_a.xml
+++ b/app/src/main/res/layout/item_a.xml
@@ -20,7 +20,7 @@
 
         <variable
             name="bean"
-            type="com.cyou.sticker.business.a.data.bean.ABean" />
+            type="com.cyou.sticker.a.data.bean.ABean" />
     </data>
 
     <LinearLayout
