--- a/app/src/main/res/layout/item_picture.xml
+++ b/app/src/main/res/layout/item_picture.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="bean"
-            type="com.cyou.sticker.business.camera.data.bean.FeedItem" />
+            type="com.cyou.sticker.camera.data.bean.FeedItem" />
 
     </data>
 
