1.修正tag标签 位置跑偏问题 2.修正编辑帖子内容流程

--- a/app/src/main/res/values/camera_styles.xml
+++ b/app/src/main/res/values/camera_styles.xml
@@ -18,14 +18,14 @@
 
 
     <style name="RedTheme" parent="AppTheme">
-        <item name="colorPrimary">@color/potato_red</item>
-        <item name="colorPrimaryDark">@color/potato_red</item>
-        <item name="colorAccent">@color/potato_red</item>
+        <item name="colorPrimary">@color/sticker_blue</item>
+        <item name="colorPrimaryDark">@color/sticker_blue</item>
+        <item name="colorAccent">@color/sticker_blue</item>
     </style>
 
     <style name="head_default">
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">@dimen/height_100px</item>
+        <item name="android:layout_height">50dp</item>
     </style>
 
     <style name="message_divider">
