--- a/app/src/main/res/layout/activity_image_process.xml
+++ b/app/src/main/res/layout/activity_image_process.xml
@@ -41,6 +41,17 @@
             android:layout_height="fill_parent"
             android:orientation="vertical" >
 
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_margin="2dp"
+                android:background="@drawable/corners_bg_white_2r_borderd"
+                android:gravity="top"
+                android:hint="@string/str_topic_content_hint"
+                android:padding="4dp"
+                android:textSize="20sp"/>
+
             <it.sephiroth.android.library.widget.HListView
                 android:id="@+id/list_tools"
                 android:layout_width="match_parent"
@@ -57,9 +68,18 @@
         android:id="@+id/btn_area"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
-        android:background="#ff004a"
+        android:background="@color/sticker_blue"
         android:orientation="horizontal" >
 
+        <TextView
+            android:id="@+id/bt_content"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/str_content"
+            android:textColor="#d0beb9"
+            android:textSize="22sp" />
         <TextView
             android:id="@+id/sticker_btn"
             android:layout_width="0dp"
