--- a/app/src/main/res/layout/view_title_bar.xml
+++ b/app/src/main/res/layout/view_title_bar.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="@dimen/height_100px"
     android:gravity="center_vertical"
-    android:background="@color/pink">
+    android:background="@color/sticker_blue">
 
     <LinearLayout
         android:id="@+id/title_left_area"
