--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -33,7 +33,7 @@
             <LinearLayout
                 android:id="@+id/rl_title"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
                 android:padding="5dp"
@@ -42,8 +42,8 @@
 
                 <ImageView
                     android:id="@+id/iv_avatar"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/def_gray_small"
                     />
@@ -119,6 +119,7 @@
                     android:layout_weight="1"
                     android:gravity="center_horizontal">
                     <ImageView
+                        android:id="@+id/iv_heart"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_heart_normal"/>
@@ -129,12 +130,27 @@
                         android:layout_height="wrap_content"
                         android:paddingLeft="5dp"/>
                 </LinearLayout>
-                <ImageView
-                    android:id="@+id/iv_comment"
+                <LinearLayout
+                    android:id="@+id/ll_comment_bt"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_comment"
-                    android:layout_weight="1"/>
+                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal">
+                    <ImageView
+                        android:id="@+id/iv_comment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_comment"
+                        />
+                    <TextView
+                        android:id="@+id/tv_comment_count"
+                        android:text="100"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="5dp"/>
+                </LinearLayout>
+
                 <ImageView
                     android:id="@+id/iv_share"
                     android:layout_width="fill_parent"
