1.去掉了中间那个活动预留页 2.调整了首页内容 3.去掉了分类页，加入了关于个人相关的各种帖子列表

--- a/app/src/main/res/layout/activity_all_topic.xml
+++ b/app/src/main/res/layout/activity_all_topic.xml
@@ -26,7 +26,7 @@
                 android:layout_marginLeft="20dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="FitTime"
+                android:text="@string/str_app_title"
                 android:textColor="@color/potato_white"
                 android:textSize="@dimen/mshow_txt_max" />
 
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="31dp"
+            android:layout_marginBottom="21dp"
             android:padding="4dp"
             android:src="@drawable/ic_camera_white"
             app:fab_colorNormal="@color/sticker_blue"
