--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,10 @@
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:background="@color/potato_white"
             android:divider="@color/potato_white"></TabWidget>
-    </RelativeLayout>
+    </RelativeLayout>dp
 
 </TabHost>
