--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -78,7 +78,11 @@
                 </RelativeLayout>
 
             </LinearLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/divider"
+                />
             <RelativeLayout
                 android:id="@+id/pictureLayout"
                 android:layout_width="match_parent"
@@ -91,7 +95,11 @@
                     android:scaleType="fitXY"
                     android:src="@drawable/def_gray_big1"/>
             </RelativeLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/divider"
+                />
 
             <TextView
                 android:id="@+id/tv_content"
