--- a/app/src/main/res/layout/activity_persenal.xml
+++ b/app/src/main/res/layout/activity_persenal.xml
@@ -1,86 +1,45 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/rl_header"
-            android:layout_width="fill_parent"
-            android:layout_height="50dip"
-            android:background="@color/sticker_blue"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="@string/str_app_title"
-                android:textColor="@color/potato_white"
-                android:textSize="@dimen/txt_max" />
-
-            <ImageView
-                android:id="@+id/iv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:onClick="onClick"
-                android:padding="10dip"
-                android:src="@drawable/ic_add_white_24dp" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/toolbar"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/rl_header"
-            android:background="@color/potato_white">
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 app:tabGravity="fill"
-                app:tabIndicatorColor="@color/sticker_blue"
+                app:tabIndicatorColor="@color/potato_white"
                 app:tabIndicatorHeight="3dp"
-                app:tabSelectedTextColor="@color/sticker_blue" />
-        </LinearLayout>
+                app:tabSelectedTextColor="@color/potato_white" />
+        </android.support.design.widget.AppBarLayout>
 
-        <FrameLayout
-            android:id="@+id/container"
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="0dp" />
-
-        </FrameLayout>
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_below="@id/toolbar"
-            android:background="@drawable/bottom_shadow_bg" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_below="@id/rl_header"
-            android:background="@drawable/bottom_shadow_bg" />
-
-    </RelativeLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
 
 </layout>
