--- a/app/src/main/res/layout/fragment_topic_list_re.xml
+++ b/app/src/main/res/layout/fragment_topic_list_re.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -36,13 +35,12 @@
 
         </com.potato.library.view.NormalEmptyView>
 
-        <com.potato.library.view.refresh.ListSwipeLayout
+        <com.potato.library.view.refresh.RecyclerSwipeLayout
             android:id="@+id/swipe_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="match_parent">
 
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -53,7 +51,7 @@
                 android:listSelector="@android:color/transparent"
                 android:scrollbars="none" />
 
-        </com.potato.library.view.refresh.ListSwipeLayout>
+        </com.potato.library.view.refresh.RecyclerSwipeLayout>
 
 
     </LinearLayout>
