--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,10 @@
         <!--   your app branding color for the app bar -->
         <item name="colorPrimary">#1D6EC9</item>
         <!--   darker variant for the status bar and contextual app bars -->
-        <item name="colorPrimaryDark">@color/material_blue_grey_800</item>
+        <item name="colorPrimaryDark">#1D6EC4</item>
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">#1D6EC4</item>
         <item name="android:windowBackground">@color/app_bg</item>
-        <item name="android:windowContentOverlay">@color/app_bg</item>
 
     </style>
 
